# src/libs/openapi-generator/configuration/api.spec.yml
@@ -17,14 +17,14 @@ tags:
       description: Classe referência para Localização
     - name: Facility
       description: Operações relacionadas a entidade lugar
-    - name: Key
-      description: Operações relacionadas a entidade Chaves
     - name: Logging
       description: Operações relacionadas a entidade Permissão
     - name: LocationType
       description: Classe referência para Tipos de Ambiente
     - name: Permission
       description: Operações relacionadas a entidade Permissão
+    - name: Key
+      description: Operações relacionadas a entidade Chaves
     - name: Reservation
       description: Classe referência para Reservas
     - name: Assignment
@@ -1829,22 +1829,26 @@ components:
         Permissions:
             type: string
             enum:
-                - MENU_EMPRESTIMOS
-                - MENU_AUTORIZACOES
-                - MENU_RECURSOS
-                - MENU_PARAMETRIZACOES
-                - MENU_GESTAO_ACESSOS
-                - EMPRESTIMOS
-                - HISTORICO
-                - SOLICITANTES
-                - PERMISSOES
-                - SALAS
-                - TIPO_AMBIENTE
-                - INSTALACOES
-                - CARGOS
-                - CONFIGURACAO
-                - USUARIOS
-                - ATRIBUICOES
+                - VER_EMPRESTIMOS
+                - EDITAR_EMPRESTIMOS
+                - VER_HISTORICOS
+                - EDITAR_HISTORICOS
+                - VER_SOLICITANTES
+                - EDITAR_SOLICITANTES
+                - VER_PERMISSOES
+                - EDITAR_PERMISSOES
+                - VER_SALAS
+                - EDITAR_SALAS
+                - VER_TIPO_AMBIENTE
+                - EDITAR_TIPO_AMBIENTE
+                - VER_INSTALACOES
+                - EDITAR_INSTALACOES
+                - VER_CARGOS
+                - EDITAR_CARGOS
+                - VER_CONFIGURACAO
+                - EDITAR_CONFIGURACAO
+                - VER_USUARIOS
+                - EDITAR_USUARIOS
         Requester:
             required:
                 - blocked
@@ -1901,6 +1905,10 @@ components:
                           nullable: true
                           allOf:
                               - $ref: "#/components/schemas/User"
+                      key:
+                          nullable: true
+                          allOf:
+                              - $ref: "#/components/schemas/Key"
                       notes:
                           type: string
                       startDateTime:
@@ -1927,6 +1935,7 @@ components:
         ReservationCommand:
             required:
                 - endDateTime
+                - key
                 - permission
                 - requester
                 - startDateTime
@@ -1939,6 +1948,8 @@ components:
                     $ref: "#/components/schemas/Status"
                 permission:
                     $ref: "#/components/schemas/PermissionLocationSummaryDto"
+                key:
+                    $ref: "#/components/schemas/Key"
                 startDateTime:
                     type: string
                     format: date-time
